Fix sponsor containers on mobile. (#151)

--- a/jekyll/assets/css/main.scss
+++ b/jekyll/assets/css/main.scss
@@ -683,7 +683,6 @@ section#donations {
 
 .project-container, .sponsor-container {
   display: inline-block;
-  margin: 15pt 25pt;
   text-align: justify;
 
   a {
